--- a/band_profile.css
+++ b/band_profile.css
@@ -4,40 +4,52 @@
       width: 100%;
     }
   }
+  
+body{
+    background-color: rgb(221, 243, 243);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-.top-bar{
+
+}
+  .top-bar{
     background:linear-gradient( 75deg, rgb(178, 207, 204), rgb(166, 204, 188), rgb(172, 230, 238));
     height: 40px;
     padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .title{
     float: left;
-    padding-bottom: 5px;
-    padding-top: 0px;
     margin-left: 20px;
-    font-weight: bolder;
+    font-weight: bold;
     align-content: center;
-    height: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 11px;
+
+
+}
+.title h2:hover{
+    color:blue;
 
 }
 
 .nav-links{
     float: right;
     height: 20px;
-    padding-top: 10px;
     margin-right: 30px;
-    font-size: 20px;
-    font-weight: bolder;
+    font-size: 14px;
+    font-weight: bold;
     word-spacing: 70px;
 
 
 }
-
-body{
-    background-color: rgb(221, 243, 243);
+.nav-links a:hover{
+    color: #000;
 }
+
+
+
 
 .head{
 
@@ -46,7 +58,7 @@ body{
     align-content: center;
     justify-content: center;
     color: darkmagenta;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
 
 
 }
@@ -87,6 +99,17 @@ body{
     text-align: center;
     font-family: arial;
     border: 1px solid grey;
+    font-size: 14px;
+
+
+
+  }
+
+  .card p{
+
+    font-size: 12px;
+
+
   }
   
   .member-title {
@@ -109,9 +132,8 @@ body{
     height: 500px;
     background-color: rgb(250, 252, 255);
     overflow: scroll;
-    line-height: 1.8;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 17px;
+    line-height: 2;
+    font-size: 15px;
     justify-content: center;
     align-content: center;
     border: 1px solid rgb(139, 169, 252);
@@ -128,11 +150,14 @@ p{
 
     footer{
         padding-top: 20px;
-        margin-top: 70px;
+        margin-top: 95px;
         display: flex;
         align-content: center;
         justify-content: center;
         padding-bottom: 20px;
         border-radius: 20px;
+        font-size: 12px;
+        font-weight: 500;
+    
     
     }
