--- a/comments.css
+++ b/comments.css
@@ -5,39 +5,51 @@
     }
   }
 
-.top-bar{
+  body{
+    background-color: rgb(221, 243, 243);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+
+}
+  .top-bar{
     background:linear-gradient( 75deg, rgb(178, 207, 204), rgb(166, 204, 188), rgb(172, 230, 238));
     height: 40px;
     padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .title{
     float: left;
-    padding-bottom: 5px;
-    padding-top: 0px;
     margin-left: 20px;
-    font-weight: bolder;
+    font-weight: bold;
     align-content: center;
-    height: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 11px;
+
+
+}
+.title h2:hover{
+    color:blue;
 
 }
 
 .nav-links{
     float: right;
     height: 20px;
-    padding-top: 10px;
     margin-right: 30px;
-    font-size: 20px;
-    font-weight: bolder;
+    font-size: 14px;
+    font-weight: bold;
     word-spacing: 70px;
 
 
 }
-
-body{
-    background-color: rgb(221, 243, 243);
+.nav-links a:hover{
+    color: #000;
 }
+
+
+
 
 .head{
 
@@ -46,10 +58,11 @@ body{
     align-content: center;
     justify-content: center;
     color: darkmagenta;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
 
 
 }
+
 
 .container{
     margin: 40px;
@@ -73,6 +86,8 @@ body{
     border: 1px solid rgb(139, 169, 252);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
+    font-size: 14px;
+
 
 
 
@@ -86,8 +101,7 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-    font-size: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 13px;
 
 
   }
@@ -101,15 +115,15 @@ input[type=text], select {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
+    font-size: 14px;
+    font-weight: bold;
 
 
   }
   
   input[type=submit]:hover {
     background-color: #45a049;
-    font-size: 16px;
+    font-size: 15px;
     
   }
   
@@ -133,7 +147,7 @@ input[type=text], select {
     overflow: scroll;
     line-height: 1.8;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     justify-content: center;
     align-content: center;
     border: 1px solid rgb(139, 169, 252);
@@ -161,11 +175,14 @@ p{
 
     footer{
         padding-top: 20px;
-        margin-top: 70px;
+        margin-top: 95px;
         display: flex;
         align-content: center;
         justify-content: center;
-        padding-bottom: 20px;
+        paddingbottom: 20px;
         border-radius: 20px;
+        font-size: 12px;
+         font-weight: 500;
+
     
     }
