--- a/music.css
+++ b/music.css
@@ -5,39 +5,51 @@
     }
   }
 
-.top-bar{
+  body{
+    background-color: rgb(221, 243, 243);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+
+}
+  .top-bar{
     background:linear-gradient( 75deg, rgb(178, 207, 204), rgb(166, 204, 188), rgb(172, 230, 238));
     height: 40px;
     padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .title{
     float: left;
-    padding-bottom: 5px;
-    padding-top: 0px;
     margin-left: 20px;
-    font-weight: bolder;
+    font-weight: bold;
     align-content: center;
-    height: 20px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 11px;
+
+
+}
+.title h2:hover{
+    color:blue;
 
 }
 
 .nav-links{
     float: right;
     height: 20px;
-    padding-top: 10px;
     margin-right: 30px;
-    font-size: 20px;
-    font-weight: bolder;
+    font-size: 14px;
+    font-weight: bold;
     word-spacing: 70px;
 
 
 }
-
-body{
-    background-color: rgb(221, 243, 243);
+.nav-links a:hover{
+    color: #000;
 }
+
+
+
 
 .head{
 
@@ -46,7 +58,7 @@ body{
     align-content: center;
     justify-content: center;
     color: darkmagenta;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
 
 
 }
@@ -84,14 +96,19 @@ body{
 }
 
 
-
+#vid{
+  margin: 5px;
+}
 footer{
-        padding-top: 20px;
-        margin-top: 10px;
-        display: flex;
-        align-content: center;
-        justify-content: center;
-        padding-bottom: 20px;
-        border-radius: 20px;
-    
-    }
+  padding-top: 20px;
+  margin-top: 40px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  padding-bottom: 20px;
+  border-radius: 20px;
+  font-size: 12px;
+  font-weight: 500;
+
+
+}
