--- a/responsive.css
+++ b/responsive.css
@@ -180,7 +180,7 @@
       
       }
     #music-col{
-        margin-top: 200px;
+        margin-top: 350px;
         display: flex;
         flex-direction: column;
         height: 900px;
@@ -189,9 +189,7 @@
         
     }
 
-    #music-card-2{
-        display: none;
-    }
+   
 
     #music-col  .card {
         margin-top: 30px;
@@ -208,6 +206,31 @@
         height: 140px !important;
         width: 270px !important;
       }
+
+
+      #music-col-2{
+        display: flex;
+        height: 900px;
+        width: 300px;
+        background-color: rgb(232, 239, 240);
+    }
+
+    #music-col-2 .card {
+        margin-top: 30px;
+        width: 280px;
+        height: 200px;
+        margin: 10px;
+        background-color: rgb(221, 221, 238);
+        text-align: center;
+        font-family: arial;
+        border: 1px solid grey;
+      }
+
+      #music-col-2  .card img{
+        height: 140px !important;
+        width: 270px !important;
+      }
+
 
     
 
